--- a/about.html
+++ b/about.html
@@ -16,11 +16,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios About Page">
-	
-	<link rel="icon" type="" href="images/FS Icon 64.png" >
-	
+    <title>Ferret Studios | About</title>
+    <meta
+        name="Ferret Studios, born from the spare moments of a humble salesperson, thrives on crafting video games that transcend mere entertainment. Each of our games is a labor of love, a testament to our passion for storytelling and a commitment to sharing narratives that resonate with audiences worldwide, featuring characters and tales we believe deserve a global stage."
+        content="Ferret Studios | About">
+
+    <link rel="icon" type="" href="FS Icon 64.png">
+
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="bootstrap.min.css">
@@ -93,13 +95,13 @@
 
                         <h4 class="PPTextSpace bold">We are Ferret Studios</h4>
                         <h5>
-                            Ferret Studios is a Video Game Development company created through the spare time of a
-                            lowly
-                            salesmen. Each game is a
-                            passion project that is designed to connect with players around the world with stories
-                            of
-                            characters, big or small, that
-                            we as a company feel the world should see.
+                            Ferret Studios, born from the spare moments of a humble salesperson, thrives on crafting
+                            video games that transcend mere
+                            entertainment. Each of our games is a labor of love, a testament to our passion for
+                            storytelling and a commitment to
+                            sharing narratives that resonate with audiences worldwide, featuring characters and tales we
+                            believe deserve a global
+                            stage.
                         </h5>
 
                     </div>
@@ -120,8 +122,9 @@
                         <div>
                             <h4 class="PPTextSpace  bold mt-0 ">Why The Name?</h4>
                             <h5 class="">
-                                Do you not like ferrets? Ferrets are great! It was also an old username from back in the
-                                day, that mindset will encompass the kind of games that this company will make.
+                                Have a soft spot for ferrets? So do we! In fact, our company name, Ferret Studios, is a
+                                nod to our nostalgic gaming roots. We believe it encapsulates the kind of games we're
+                                passionate about creating.
                             </h5>
                         </div>
 
@@ -135,8 +138,11 @@
 
                         <h4 class="PPTextSpace mt-0 bold">Location</h4>
                         <h5>
-                            Currently based in Gloucestershire, England 🇬🇧 However, we will shortly be moving
-                            to Bristol , England.
+                            Nestled within the dynamic cityscape of Bristol, England 🇬🇧, our organization has firmly
+                            established its headquarters, drawing
+                            inspiration from the city's rich cultural tapestry and thriving business ecosystem. From
+                            this strategic vantage point,
+                            we leverage the energy and innovation that define Bristol to drive our mission forward.
                         </h5>
 
                     </div>
@@ -145,7 +151,7 @@
                         <div class="d-flex justify-content-center ">
 
                             <iframe class="btnShadow mapBorder"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78832.08147630758!2d-2.243963944863404!3d51.87003857310303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48705335954a60bd%3A0x37ec886359412762!2sGloucestershire!5e0!3m2!1sen!2suk!4v1683558046412!5m2!1sen!2suk"
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19889.639876623918!2d-2.5896861171630854!3d51.45439277741226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1694871595918!5m2!1sen!2suk"
                                 width="400" height="300" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
@@ -180,7 +186,7 @@
 
                 <div class="row text-center">
 
-                    <h5>Have a software idea, or video game you want created?</h5>
+                    <h5>Have a software or video game idea you want created?</h5>
                     <h5>Get in Touch! We would love to hear what you have to offer.</h5>
 
                 </div>
