--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios Home Page">
-	
-	<link rel="icon" type="" href="images/FS Icon 64.png" >
+    <title>Ferret Studios | Home Page</title>
+    <meta
+        name="Ferret Studios: Where Imagination Meets Innovation in Game Development
+
+Welcome to Ferret Studios, where creativity knows no bounds. We are a passionate team of web developers dedicated to crafting immersive and unforgettable gaming experiences. With a rich history rooted in retro gameplay, we're on a mission to bring classic gaming vibes to the modern digital landscape. Explore our world of captivating narratives, stunning visuals, and engaging gameplay as we breathe life into our game development dreams. Join us on this exciting journey, and let's game on!"
+        content="Ferret Studios | Home Page">
+
+    <link rel="icon" type="" href="FS Icon 64.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -92,9 +96,9 @@
                     </div>
 
                     <div>
-                        <h5 style="font-weight: 400;">Hi! We're a mobile game studio bringing retro gameplay back to the
-                            Google Play Store.</h5>
-                      
+                        <h5 style="font-weight: 400;">Hello there! We're a mobile game studio on a mission to revive the
+                            nostalgic charm of retro gameplay in the Google Play
+                            Store</h5>
                     </div>
 
                 </div>
@@ -106,38 +110,134 @@
         </main>
 
 
+
         <main class="row">
 
-            <div class="row banner">
+            <!-- Girrafe Ring Rumble Banner -->
+            <div class="row banner giraffeRingRumbleBannerColour pb-5 pt-3">
+                <div class="col-12 col-lg-6">
+                    <div class="ps-lg-5">
+                        <h3 class="bold mt-5 text-center text-lg-start">Girrafe Ring Rumble</h3>
+                        <h5 class="text-center text-lg-start textShadow">Welcome to the wacky and whimsical world of
+                            Giraffe Ring Rumble where the
+                            laws of physics meet wooden string giraffe
+                            combat in a hilarious and competitive showdown! In this uproarious solo adventure, players
+                            take on the role of feisty
+                            giraffe gladiators with one mission: to knock their opponent out of the ring while
+                            skillfully avoiding the same fate
+                            themselves.
 
+                            Use your shields and big head to headbutt the enemy giraffes out of your territory. Get That
+                            Giraffe Out of Your Jungle!
+                        </h5>
 
-                <div class="col-6 ">
-                    <div class="ps-5">
-                        <h3 class="bold mt-5">Cube Dropper</h3>
-                        <h5 class="textShadow">Following the tale of Cube! You fight against the evil wizard Artemus who
-                            seems to hate and fear
-                            you.
-                            Why is this? Watch him close and you may find out. A story of power can never end well if
-                            control
-                            is the only desire.</h5>
-                        <div> <img src="images/cubedropper-screenshot (1).png"
-                                class="img-fluid bannerImg pictureBoxShadow" alt="Cube Dropper Gameplay" width="575">
+                        <!-- Feature Graphic -->
+                        <div class=" text-center text-lg-start m-5"> <img
+                                src="images/Giraffe Ring Rumble/Feature Graphic.png" class="img-fluid pictureBoxShadow"
+                                alt="Giraffe Ring Rumble Graphic" width="575">
                         </div>
+
                         <p class="d-inline-flex align-bottom">Genre: Action, Arcade</p>
-                        <div> <img src="images/google-play-badge.png" class="img-fluid mt-2 mb-3 oddPictureShadow"
-                                alt="Google Play Badge" width="161.5">
+
+                        <!-- Play Store Icon -->
+                        <div>
+                            <a href="https://play.google.com/store/apps/details?id=com.FerretStudios.GiraffeRingRumble&pcampaignid=web_share"
+                                target="_blank"><img src="images/google-play-badge.png"
+                                    class="img-fluid mt-2 mb-3 oddPictureShadow" alt="Google Play Badge"
+                                    width="161.5"></a>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
+                <!-- Game Icon -->
+                <div class="d-none d-lg-flex col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
 
-                    <img style="position:relative; right:10px;" src="images/App Logo Square.png"
+                    <img style="position:relative; right:10px;" src="images/Giraffe Ring Rumble/App Logo Square.png"
                         class="img-fluid oddPictureShadow " alt="Ferret Studios Logo" width="150">
                 </div>
 
             </div>
+
+            <!-- PolyPlanet Banner -->
+            <div class="row banner polyplanetBannerColour pb-5 pt-3">
+                <div class="col-12 col-lg-6">
+                    <div class="ps-lg-5">
+                        <h3 class="bold mt-5 text-center text-lg-start">PolyPlanet</h3>
+                        <h5 class="text-center text-lg-start textShadow">Embark on a cosmic journey like no other in
+                            PolyPlanet, the captivating
+                            3D idle clicker game that blends the addictive
+                            mechanics of Cookie Clicker with the vast expanse of the universe. Your mission? To nurture
+                            and expand your very own
+                            planet until it's ready to venture out into the universe as a fully-fledged celestial body!
+                        </h5>
+
+                        <!-- Feature Graphic -->
+                        <div class="text-center text-lg-start m-5"> <img src="images/PolyPlanet/Feature Graphic3.png"
+                                class="img-fluid pictureBoxShadow" alt="PolyPlanet Graphic" width="575">
+                        </div>
+
+                        <p class="d-inline-flex align-bottom">Genre: Casual, Incremental, Adventure</p>
+
+                        <!-- Play Store Icon -->
+                        <div> <a href="https://play.google.com/store/apps/details?id=com.FerretStudio.HowtoGrowaPlanet&pcampaignid=web_share"
+                                target="_blank">
+                                <img src="images/google-play-badge.png" class="img-fluid mt-2 mb-3 oddPictureShadow"
+                                    alt="Google Play Badge" width="161.5"></a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Game Icon -->
+                <div class="d-none d-lg-flex col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
+
+                    <img style="position:relative; right:10px;" src="images/PolyPlanet/App Logo Square.png"
+                        class="img-fluid oddPictureShadow" alt="Ferret Studios Logo" width="150">
+                </div>
+            </div>
+
+            <!-- Cube Dropper Banner -->
+            <div class="row banner cubeDropperBannerColour pb-5 pt-3">
+                <div class="col-12 col-lg-6">
+                    <div class="ps-lg-5">
+                        <h3 class="bold mt-5 text-center text-lg-start ">Cube Dropper</h3>
+                        <h5 class="text-center text-lg-start textShadow">Following the tale of Cube! You fight
+                            against
+                            the evil wizard
+                            Artemus who
+                            seems to hate and fear
+                            you.
+                            Why is this? Watch him close and you may find out. A story of power can never end well
+                            if
+                            control
+                            is the only desire.
+                        </h5>
+
+                        <!-- Feature Graphic -->
+                        <div class="text-center text-lg-start m-5"> <img src="images/Cube Dropper/Store Banner.png"
+                                class="img-fluid pictureBoxShadow ml-lg-5" alt="Cube Dropper Graphic" width="575">
+                        </div>
+                        <p class="d-inline-flex align-bottom">Genre: Casual, Incremental, Adventure</p>
+
+                        <!-- Play Store Icon -->
+                        <div> <a href="https://play.google.com/store/apps/details?id=com.FerretStudios.CubeDropper&pcampaignid=web_share"
+                                target="_blank">
+                                <img src="images/google-play-badge.png" class="img-fluid mt-2 mb-3 oddPictureShadow"
+                                    alt="Google Play Badge" width="161.5"></a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Game Icon -->
+                <div class="d-none d-lg-flex col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
+
+                    <img style="position:relative; right:10px;" src="images/Cube Dropper/App Logo Square.png"
+                        class="img-fluid oddPictureShadow" alt="Ferret Studios Logo" width="150">
+                </div>
+            </div>
+
 
         </main>
 
@@ -145,7 +245,7 @@
 
         <section>
 
-            <div class="row d-none d-sm-block">
+            <div class="row d-none d-sm-block sectionPageNav">
 
                 <div class="col d-flex justify-content-around">
 
@@ -199,7 +299,7 @@
 
                 <div class="row text-center">
 
-                    <h5>Have a software idea, or video game you want created?</h5>
+                    <h5>Have a software or video game idea you want created?</h5>
                     <h5>Get in Touch! We would love to hear what you have to offer.</h5>
 
                 </div>
