--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -17,9 +17,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios | Privacy Policy">
-	
-		<link rel="icon" type="" href="images/FS Icon 64.png" >
+    <meta
+        name="At Ferret Studios, we take your privacy and data security seriously. This Privacy Policy outlines how we collect, use, and safeguard your personal information when you visit our website or use our services."
+        content="Ferret Studios | Privacy Policy">
+
+    <link rel="icon" type="" href="images/FS Icon 64.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -162,7 +164,7 @@
 
                 <div class="row text-center">
 
-                    <h5>Have a software idea, or video game you want created?</h5>
+                    <h5>Have a software or video game idea you want created?</h5>
                     <h5>Get in Touch! We would love to hear what you have to offer.</h5>
 
                 </div>
