--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios Contact Page">
-	
-	<link rel="icon" type="" href="images/FS Icon 64.png" >
+    <title>Ferret Studios | Contact</title>
+    <meta
+        name="Thank you for your interest in Ferret Studios. We value your feedback, inquiries, and opportunities for collaboration. Please feel free to reach out to us through our contact page, X, or LinkedIn"
+        content="Ferret Studios | Contact">
+
+    <link rel="icon" type="" href="FS Icon 64.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -130,10 +132,10 @@
 
                     <div class=" col-12 mt-5 d-none d-lg-block">
 
-                        <h4 class="ms-5 mb-4">Location in Gloucestershire, England 🇬🇧</h4>
+                        <h4 class="ms-5 mb-4">Location in Bristol, England 🇬🇧</h4>
 
                         <iframe class="btnShadow mapBorder "
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78832.08147630758!2d-2.243963944863404!3d51.87003857310303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48705335954a60bd%3A0x37ec886359412762!2sGloucestershire!5e0!3m2!1sen!2suk!4v1683558046412!5m2!1sen!2suk"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19889.639876623918!2d-2.5896861171630854!3d51.45439277741226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1694871595918!5m2!1sen!2suk"
                             width="928" height="464" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
@@ -169,7 +171,7 @@
 
                 <div class="row text-center">
 
-                    <h5>Have a software idea, or video game you want created?</h5>
+                    <h5>Have a software or video game idea you want created?</h5>
                     <h5>Get in Touch! We would love to hear what you have to offer.</h5>
 
                 </div>
