--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         name="Ferret Studios, born from the spare moments of a humble salesperson, thrives on crafting video games that transcend mere entertainment. Each of our games is a labor of love, a testament to our passion for storytelling and a commitment to sharing narratives that resonate with audiences worldwide, featuring characters and tales we believe deserve a global stage."
         content="Ferret Studios | About">
 
-    <link rel="icon" type="" href="FS Icon 64.png">
+    <link rel="icon" type="" href="images/FS Icon 64.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
