--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         name="Thank you for your interest in Ferret Studios. We value your feedback, inquiries, and opportunities for collaboration. Please feel free to reach out to us through our contact page, X, or LinkedIn"
         content="Ferret Studios | Contact">
 
-    <link rel="icon" type="" href="FS Icon 64.png">
+    <link rel="icon" type="" href="images/FS Icon 64.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
