--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 Welcome to Ferret Studios, where creativity knows no bounds. We are a passionate team of web developers dedicated to crafting immersive and unforgettable gaming experiences. With a rich history rooted in retro gameplay, we're on a mission to bring classic gaming vibes to the modern digital landscape. Explore our world of captivating narratives, stunning visuals, and engaging gameplay as we breathe life into our game development dreams. Join us on this exciting journey, and let's game on!"
         content="Ferret Studios | Home Page">
 
-    <link rel="icon" type="" href="FS Icon 64.png">
+    <link rel="icon" type="" href="images/FS Icon 64.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -53,20 +53,20 @@ Welcome to Ferret Studios, where creativity knows no bounds. We are a passionate
         </button> -->
 
         <header>
-            <div class="row ">
-                <div class="col-12 col-md-6 col-lg-4 ">
+            <div class="row">
+                <div class="col-12 col-lg-4">
 
                     <a href="index.html">
                         <img src="images/Header.png" class="img-fluid d-block d-sm-none mx-auto"
                             alt="Ferret Studios Logo" width="228" height="40">
-                        <img src="images/Header.png" class="img-fluid d-none d-sm-block mx-auto mx-sm-left"
+                        <img src="images/Header.png" class="img-fluid d-none d-sm-block mx-auto mx-md-left"
                             alt="Ferret Studios Logo" width="456" height="80">
                     </a>
 
                 </div>
 
-                <div class="col my-auto">
-                    <nav class="text-center text-md-end">
+                <div class="col-12 col-lg-8  my-auto">
+                    <nav class="text-center text-lg-end">
 
                         <a href="index.html">Home</a>
                         <a href="about.html">About</a>
