--- a/contact.html
+++ b/contact.html
@@ -90,26 +90,27 @@
 
                 </div>
 
-                <div class="row PPTextSpaceTitle mb-5">
+                <!-- form -->
+                <form class="row PPTextSpaceTitle mb-5">
 
                     <div class="col-12">
 
                         <h6>Fullname *</h6>
-                        <input type="text" placeholder="  Name...">
+                        <input name="name" type="text" placeholder="  Name...">
 
                     </div>
 
                     <div class="col-12 mt-4">
 
                         <h6>Email *</h6>
-                        <input type="text" placeholder="  Email...">
+                        <input name="email" type="text" placeholder="  Email...">
 
                     </div>
 
                     <div class="col-12 mt-4">
 
                         <h6>Phone Number</h6>
-                        <input type="text" placeholder="  Phone Number...">
+                        <input name="phoneNumber" type="text" placeholder="  Phone Number...">
 
                     </div>
 
@@ -118,32 +119,36 @@
 
                         <div>
                             <h6>Message *</h6>
-                            <textarea style="min-height: 9rem;" type="text" placeholder="  Message..."> </textarea>
+                            <textarea style="width: 40vw;" rows="12" cols="80" type="text" name="message"
+                                placeholder="  Message..."> </textarea>
                         </div>
 
-                        <div style="margin-top: 110px;" class="col-3 ">
-                            <button class="btnShadow ">
+
+                        <div style="margin-top: 110px;" class=" d-flex align-items-end">
+                            <button type="submit" name="submit" class="btnShadow ">
                                 Submit
                             </button>
                         </div>
 
                     </div>
 
+                </form>
 
-                    <div class=" col-12 mt-5 d-none d-lg-block">
+                <!-- map -->
+                <div class="col-12 mt-5 d-none d-lg-block">
 
-                        <h4 class="ms-5 mb-4">Location in Bristol, England 🇬🇧</h4>
+                    <h4 class="ms-5 mb-4 text-left">Location in Bristol, England 🇬🇧</h4>
 
-                        <iframe class="btnShadow mapBorder "
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19889.639876623918!2d-2.5896861171630854!3d51.45439277741226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1694871595918!5m2!1sen!2suk"
-                            width="928" height="464" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-
-                    </div>
-
+                    <iframe class="btnShadow mapBorder "
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19889.639876623918!2d-2.5896861171630854!3d51.45439277741226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1694871595918!5m2!1sen!2suk"
+                        width="70%" height="464" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
 
                 </div>
+
+
+
 
 
             </div>
