Contact Form Removed

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-ZRVM4948MM');
+        gtag('config', 'G-ZRVM4948MM'); 
     </script>
 
     <meta charset="UTF-8">
@@ -85,13 +85,13 @@
 
                     <div class="ms-5 PPTextSpace">
                         <h3 class=" textShadow  ">Contact</h3>
-                        <h5 class="light">Send us an email</h5>
+                        <h5 class="light">Send us an email via TheFerretStudio@Gmail.com</h5>
                     </div>
-
                 </div>
 
                 <!-- form -->
-                <form class="row PPTextSpaceTitle mb-5">
+
+                <!-- <form class="row PPTextSpaceTitle mb-5">
 
                     <div class="col-12">
 
@@ -132,7 +132,7 @@
 
                     </div>
 
-                </form>
+                </form> -->
 
                 <!-- map -->
                 <div class="col-12 mt-5 d-none d-lg-block">
